--- a/bylt/index.html
+++ b/bylt/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="BYLT BY PENNIO — Build Your Loyal Tribe. A clear system that helps you grow, sell, and scale with ease." />
+    <meta name="description" content="BYLT BY PENNIO — Build Your Loyal Tribe. Empower your brand to BYLD (Build Your Loyal Tribe) through simple systems for clarity and growth." />
     <meta property="og:title" content="BYLT — Build Your Loyal Tribe" />
-    <meta property="og:description" content="BYLT4U is your done-for-you system pack that helps you build a strong, clear, and consistent brand." />
+    <meta property="og:description" content="The ecosystem that helps you BYLD a dedicated community around your brand." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://pennio-design.github.io/bylt/og-image.jpg" />
     <meta name="theme-color" content="#3F51B5" />
@@ -59,7 +59,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
       <nav class="max-w-7xl mx-auto flex justify-between items-center p-4">
         <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-bylt-black">BYLT BY PENNIO</h1>
-        <a href="#byltForm" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Start Now</a>
+        <a href="#leadform" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Start Now</a>
       </nav>
     </header>
 
@@ -70,21 +70,12 @@
           Build a Brand That Works — Not One That Wastes Time
         </h2>
         <p class="text-lg md:text-xl text-bylt-graphite mb-8">
-          BYLT helps you create a simple, strong brand system that saves time, builds clarity, and grows your loyal community.
+          BYLT helps you create a simple, strong brand system that saves time, grows your community, and builds loyalty.
         </p>
-        <a href="#bylt4u" class="inline-block bg-root-indigo text-white font-bold px-8 py-3 rounded-xl shadow-lg hover:bg-indigo-600 transition">
-          See How It Works
+        <a href="#services" class="inline-block bg-root-indigo text-white font-bold px-8 py-3 rounded-xl shadow-lg hover:bg-indigo-600 transition">
+          See What You’ll Get
         </a>
       </div>
-    </section>
-
-    <!-- BYLT4U Core Section -->
-    <section id="bylt4u" class="text-white py-20 px-4 bg-gradient-to-br from-gray-900 to-black text-center">
-      <h3 class="text-4xl font-extrabold mb-4">BYLT4U — <span class="text-root-indigo">Your Done-For-You System Pack</span></h3>
-      <p class="max-w-2xl mx-auto text-lg text-white/80 mb-8">
-        All six pillars. One seamless setup that builds your brand while you focus on what you do best.
-      </p>
-      <a href="#byltForm" class="bg-white text-root-indigo font-bold px-10 py-3 rounded-xl shadow-lg hover:bg-gray-100 transition">Start My System</a>
     </section>
 
     <!-- Services -->
@@ -92,54 +83,54 @@
       <h3 class="text-3xl md:text-4xl font-extrabold text-center mb-12">The Six Pillars of <span class="text-root-indigo">BYLT</span></h3>
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
 
-        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo hover:shadow-xl transition cursor-pointer" data-service="Brand Systems Setup (BYLT4U)">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo hover:shadow-xl transition cursor-pointer" data-service="BYLT.Root — Discovery & Foundation">
           <i data-lucide="anchor" class="w-10 h-10 text-root-indigo mb-4"></i>
-          <h4 class="text-2xl font-semibold mb-2">BYLT4U</h4>
-          <p class="text-bylt-graphite text-sm">Get a full done-for-you brand system built across all six pillars — from clarity to launch.</p>
+          <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-root-indigo">Root</span></h4>
+          <p class="text-bylt-graphite text-sm">Define what your brand truly stands for — your values, mission, and voice.</p>
         </div>
 
-        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green hover:shadow-xl transition cursor-pointer" data-service="Campaign Strategy">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green hover:shadow-xl transition cursor-pointer" data-service="BYLT.Map — Strategy & Growth">
           <i data-lucide="compass" class="w-10 h-10 text-map-green mb-4"></i>
-          <h4 class="text-2xl font-semibold mb-2">Campaign Strategy</h4>
-          <p class="text-bylt-graphite text-sm">Plan your next brand or product campaign with clear, actionable strategy.</p>
+          <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-map-green">Map</span></h4>
+          <p class="text-bylt-graphite text-sm">Create a clear plan to grow your audience and community sustainably.</p>
         </div>
 
-        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua hover:shadow-xl transition cursor-pointer" data-service="Brand Design">
-          <i data-lucide="palette" class="w-10 h-10 text-voice-aqua mb-4"></i>
-          <h4 class="text-2xl font-semibold mb-2">Brand Design</h4>
-          <p class="text-bylt-graphite text-sm">Design your visual identity — logo, colours, and style system that represent your essence.</p>
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua hover:shadow-xl transition cursor-pointer" data-service="BYLT.Voice — Messaging & Storytelling">
+          <i data-lucide="megaphone" class="w-10 h-10 text-voice-aqua mb-4"></i>
+          <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-voice-aqua">Voice</span></h4>
+          <p class="text-bylt-graphite text-sm">Shape your brand message so people listen, connect, and remember you.</p>
         </div>
 
-        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray hover:shadow-xl transition cursor-pointer" data-service="Website Experience">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray hover:shadow-xl transition cursor-pointer" data-service="BYLT.Frame — Design & Visual Identity">
           <i data-lucide="layout-grid" class="w-10 h-10 text-frame-gray mb-4"></i>
-          <h4 class="text-2xl font-semibold mb-2">Website Experience</h4>
-          <p class="text-bylt-graphite text-sm">Create a smooth, clear, and conversion-driven online experience for your audience.</p>
+          <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-frame-gray">Frame</span></h4>
+          <p class="text-bylt-graphite text-sm">Design your look — logo, colours, and brand visuals that stand out.</p>
         </div>
 
-        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange hover:shadow-xl transition cursor-pointer" data-service="Automation Flow">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange hover:shadow-xl transition cursor-pointer" data-service="BYLT.Echo — Marketing & Launch">
           <i data-lucide="send" class="w-10 h-10 text-echo-orange mb-4"></i>
-          <h4 class="text-2xl font-semibold mb-2">Automation Flow</h4>
-          <p class="text-bylt-graphite text-sm">Set up simple systems that automate your daily brand and marketing tasks.</p>
+          <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-echo-orange">Echo</span></h4>
+          <p class="text-bylt-graphite text-sm">Plan your campaigns, content, and launch strategies for impact.</p>
         </div>
 
-        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe hover:shadow-xl transition cursor-pointer" data-service="Content System">
-          <i data-lucide="file-text" class="w-10 h-10 text-focus-taupe mb-4"></i>
-          <h4 class="text-2xl font-semibold mb-2">Content System</h4>
-          <p class="text-bylt-graphite text-sm">Build a content rhythm that keeps your brand visible and valuable all year.</p>
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe hover:shadow-xl transition cursor-pointer" data-service="BYLT.Focus — Systems & Operations">
+          <i data-lucide="shield" class="w-10 h-10 text-focus-taupe mb-4"></i>
+          <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-focus-taupe">Focus</span></h4>
+          <p class="text-bylt-graphite text-sm">Simplify your operations so your brand runs smoothly every day.</p>
         </div>
       </div>
     </section>
 
-    <!-- BYLT Form -->
-    <section id="byltForm" class="bg-white py-20 text-center">
-      <h3 class="text-3xl font-extrabold text-bylt-black mb-4">Start Your BYLT System</h3>
+    <!-- Lead Magnet Form -->
+    <section id="leadform" class="bg-white py-20 text-center">
+      <h3 class="text-3xl font-extrabold text-bylt-black mb-4">Get Your Brand System Started</h3>
       <p class="text-bylt-graphite mb-8 max-w-2xl mx-auto">
-        Fill this form — let’s build the system that powers your brand.
+        Fill the form below — let’s help you build a simple, strong, and stress-free brand system.
       </p>
 
       <div class="max-w-lg mx-auto">
-        <form id="form" action="https://formsubmit.co/91dd305c9a1f9afd33dc0ca5b60f1311" method="POST" class="bg-gray-50 p-8 rounded-2xl shadow-lg space-y-4">
-          <input type="hidden" name="_subject" value="New BYLT Inquiry" />
+        <form id="byltForm" action="https://formsubmit.co/91dd305c9a1f9afd33dc0ca5b60f1311" method="POST" class="bg-gray-50 p-8 rounded-2xl shadow-lg space-y-4">
+          <input type="hidden" name="_subject" value="New BYLT Lead" />
           <input type="hidden" name="_template" value="box" />
           <input type="hidden" name="_captcha" value="false" />
 
@@ -158,17 +149,19 @@
             <input type="text" name="Brand" class="w-full border-gray-300 rounded-md p-3" placeholder="e.g. Brillá.ng" />
           </div>
 
+          <!-- New Service Field -->
           <div>
             <label class="block text-left font-semibold mb-1">Select Service</label>
             <select name="Service" id="selectedService" required class="w-full border-gray-300 rounded-md p-3 bg-white">
               <option value="" disabled selected>Select one...</option>
-              <option value="BYLT4U — Full System Setup">BYLT4U — Full System Setup</option>
-              <option value="Campaign Strategy">Campaign Strategy</option>
-              <option value="Brand Design">Brand Design</option>
-              <option value="Website Experience">Website Experience</option>
-              <option value="Automation Flow">Automation Flow</option>
-              <option value="Content System">Content System</option>
-              <option value="Clarity Session">Clarity Session</option>
+              <option value="BYLT.Root — Discovery & Foundation">BYLT.Root — Discovery & Foundation</option>
+              <option value="BYLT.Map — Strategy & Growth">BYLT.Map — Strategy & Growth</option>
+              <option value="BYLT.Voice — Messaging & Storytelling">BYLT.Voice — Messaging & Storytelling</option>
+              <option value="BYLT.Frame — Design & Visual Identity">BYLT.Frame — Design & Visual Identity</option>
+              <option value="BYLT.Echo — Marketing & Launch">BYLT.Echo — Marketing & Launch</option>
+              <option value="BYLT.Focus — Systems & Operations">BYLT.Focus — Systems & Operations</option>
+              <option value="BYLT4U — Done For You Service">BYLT4U — Done For You Service</option>
+              <option value="General Inquiry">General Inquiry</option>
             </select>
           </div>
 
@@ -202,6 +195,7 @@
       document.addEventListener("DOMContentLoaded", () => {
         lucide?.createIcons();
 
+        // Scroll reveal
         const observer = new IntersectionObserver(entries => {
           entries.forEach(e => {
             if (e.isIntersecting) {
@@ -212,18 +206,18 @@
         }, { threshold: 0.15 });
         document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
 
-        // Prefill form from service cards
+        // Service click prefill
         document.querySelectorAll('.service-card').forEach(card => {
           card.addEventListener('click', () => {
             const service = card.getAttribute('data-service');
             const select = document.getElementById('selectedService');
             select.value = service;
-            document.querySelector('#byltForm').scrollIntoView({ behavior: 'smooth' });
+            document.querySelector('#leadform').scrollIntoView({ behavior: 'smooth' });
           });
         });
 
-        // Handle form submit with popup
-        const form = document.getElementById('form');
+        // Form submit with popup (no captcha)
+        const form = document.getElementById('byltForm');
         const popup = document.getElementById('thankYouPopup');
         const closeBtn = document.getElementById('closePopup');
 
@@ -237,7 +231,9 @@
             .catch(() => alert('Something went wrong. Please try again.'));
         });
 
-        closeBtn.addEventListener('click', () => popup.style.display = 'none');
+        closeBtn.addEventListener('click', () => {
+          popup.style.display = 'none';
+        });
       });
     </script>
   </body>
